8319161: GC: Make TestParallelGCThreads use createTestJavaProcessBuilder